--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@ gathering = smart
 inventory = ./config/hosts
 log_path = ./ansible.log
 roles_path = ext_roles
+ansible_python_interpreter=/usr/local/bin/python2
