--- a/roles/macos/tasks/dock.yml
+++ b/roles/macos/tasks/dock.yml
@@ -9,20 +9,20 @@
   notify:
     - killall Dock
 
-- name: Set Dock orientation
-  osx_defaults:
-    domain: com.apple.dock
-    key: orientation
-    type: string
-    value: "bottom"
-  notify:
-    - killall Dock
+# - name: Set Dock orientation
+#   osx_defaults:
+#     domain: com.apple.dock
+#     key: orientation
+#     type: string
+#     value: "bottom"
+#   notify:
+#     - killall Dock
 
-- name: Automatically hide and show the Dock
-  osx_defaults:
-    domain: com.apple.dock
-    key: autohide
-    type: bool
-    value: true
-  notify:
-    - killall Dock
+# - name: Automatically hide and show the Dock
+#   osx_defaults:
+#     domain: com.apple.dock
+#     key: autohide
+#     type: bool
+#     value: true
+#   notify:
+#     - killall Dock
