--- a/roles/macos/tasks/safari_webkit.yml
+++ b/roles/macos/tasks/safari_webkit.yml
@@ -7,6 +7,7 @@
     type: bool
     value: "{{ item.value }}"
   with_items:
+    - { name: "Open windows from last session", key: "AlwaysRestoreSessionAtLaunch", value: "true"}
     # - { name: "Don't send search queries to Apple", key: "UniversalSearchEnabled", value: "false"}
     # - { name: "Don't send search queries to Apple", key: "UniversalSearchEnabled", value: "true"}
     # - { name: "Show the full URL in the address bar (note: this still hides the scheme)", key: "ShowFullURLInSmartSearchField", value: "true"}
