--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,13 +28,13 @@ jobs:
           name: Run playbook
           command: ansible-playbook main.yml -i inventory --skip-tags "mas"
       # Test the playbook's idempotence.
-      # - run: idempotence=$(mktemp)
-      # - run: ansible-playbook --extra-vars '{"configure_terminal":"false"}' main.yml -i inventory --skip-tags "mas" | tee -a ${idempotence}
-      # - run: >
-      #     tail ${idempotence}
-      #     | grep -q 'changed=0.*failed=0'
-      #     && (echo 'Idempotence test: pass' && exit 0)
-      #     || (echo 'Idempotence test: fail' && exit 1)
+      - run: idempotence=$(mktemp)
+      - run: ansible-playbook --extra-vars '{"configure_terminal":"false"}' main.yml -i inventory --skip-tags "mas" | tee -a ${idempotence}
+      - run: >
+          tail ${idempotence}
+          | grep -q 'changed=0.*failed=0'
+          && (echo 'Idempotence test: pass' && exit 0)
+          || (echo 'Idempotence test: fail' && exit 1)
 
 workflows:
   version: 2
