--- a/tasks/osx/terminal.yml
+++ b/tasks/osx/terminal.yml
@@ -1,4 +1,9 @@
 ---
 
 - name: Only use UTF-8 in Terminal.app
-  command: defaults write com.apple.terminal StringEncodings -array 4
+  osx_defaults:
+    domain: com.apple.terminal
+    key: StringEncodings
+    type: array
+    value:
+      - "4"
