--- a/tasks/osx/dock.yml
+++ b/tasks/osx/dock.yml
@@ -1,28 +1,52 @@
 ---
 
 - name: Set the icon size of Dock items
-  command: defaults write com.apple.dock tilesize -int 42
-
-# - name: Enable spring loading for all Dock items
-#   command: defaults write com.apple.dock enable-spring-load-actions-on-all-items -bool true
-
-# - name: Don’t animate opening applications from the Dock
-#   command: defaults write com.apple.dock launchanim -bool false
+  osx_defaults:
+    domain: com.apple.dock
+    key: tilesize
+    type: int
+    value: 42
 
 - name: Speed up Mission Control animations
-  command: defaults write com.apple.dock expose-animation-duration -float 0.15
+  osx_defaults:
+    domain: com.apple.dock
+    key: expose-animation-duration
+    type: float
+    value: 0.15
 
-# - name: Automatically hide and show the Dock
-#   command: defaults write com.apple.dock autohide -bool true
-
-- name: Make Dock icons of hidden applications translucent
-  command: defaults write com.apple.dock showhidden -bool true
-
-# - name: Enable the 'reduce transparency' option on Yosemite. Save GPU cycles.
-#   command: defaults write com.apple.universalaccess reduceTransparency -bool true
+- name: "{{ item.name }}"
+  osx_defaults:
+    domain: com.apple.dock
+    key: "{{ item.key }}"
+    type: bool
+    value: "{{ item.value }}"
+  with_items:
+    - name: Make Dock icons of hidden applications translucent
+      key: showhidden
+      value: true
+    # - name: Enable spring loading for all Dock items
+    #   key: enable-spring-load-actions-on-all-items
+    #   value: true
+    # - name: Don’t animate opening applications from the Dock
+    #   key: launchanim
+    #   value: false
+    # - name: Automatically hide and show the Dock
+    #   key: autohide
+    #   value: true
 
 # - name: Set Dock orientation.
-#   command: defaults write com.apple.dock orientation -string "bottom"
+#   osx_defaults:
+#     domain: com.apple.dock
+#     key: orientation
+#     type: string
+#     value: "bottom"
+
+# - name: Enable the 'reduce transparency' option on Yosemite. Save GPU cycles.
+#   osx_defaults:
+#     domain: com.apple.universalaccess
+#     key: reduceTransparency
+#     type: bool
+#     value: true
 
 # - name: Add iOS Simulator to Applications folder
 #   command: ln -sf /Applications/Xcode.app/Contents/Developer/Applications/Simulator.app /Applications/Simulator.app
