--- a/tasks/osx/time_machine.yml
+++ b/tasks/osx/time_machine.yml
@@ -1,4 +1,8 @@
 ---
 
 # - name: Prevent Time Machine from prompting to use new hard drives as backup volume
-#   command: defaults write com.apple.TimeMachine DoNotOfferNewDisksForBackup -bool true
+#   osx_defaults:
+#     domain: com.apple.TimeMachine
+#     key: DoNotOfferNewDisksForBackup
+#     type: bool
+#     value: true
