--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
-gathering = smart
-inventory = ./config/hosts
-log_path = ./ansible.log
-roles_path = ext_roles
-ansible_python_interpreter=/usr/local/bin/python2
+roles_path = ./roles:/etc/ansible/roles
+
+[ssh_connection]
+pipelining = True
+control_path = /tmp/ansible-ssh-%%h-%%p-%%r
