--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,33 @@ jobs:
       xcode: "9.0"
     steps:
       - checkout
-      - run: bash init.sh
+      - name: Install pip.
+        run: easy_install pip
+      - name: Install Ansible.
+        run: pip install ansible
+      - name: Install pexpect.
+      - run: pip install pexpect -U --quiet
+      - name: Add ansible.cfg to pick up roles path
+        run: "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+      - name: Install dependencies
+        run: ansible-galaxy install -r requirements.yml
       # Debug info
       - run: python --version
       - run: ansible --version
       # Run
-      - run: ansible-playbook playbook.yml --syntax-check
-      - run: ansible-playbook playbook.yml --skip-tags "skip_ci,mas_app,xcode"
+      - name: Checking the role/playbook's syntax
+        run: ansible-playbook main.yml --syntax-check
+      - name: Copy test config.yml into place.
+        run: cp tests/config.yml config.yml
+      - run: ansible-playbook main.yml --skip-tags "mas"
+      # Test the playbook's idempotence.
+      - run: idempotence=$(mktemp)
+      - "ansible-playbook --extra-vars '{\"configure_terminal\":\"false\"}' main.yml | tee -a ${idempotence}"
+      - run: >
+          tail ${idempotence}
+          | grep -q 'changed=0.*failed=0'
+          && (echo 'Idempotence test: pass' && exit 0)
+          || (echo 'Idempotence test: fail' && exit 1)
 
 workflows:
   version: 2
