--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,28 +6,34 @@ jobs:
       xcode: "9.0"
     steps:
       - checkout
-      - name: Install pip.
-        run: easy_install pip
-      - name: Install Ansible.
-        run: pip install ansible
-      - name: Install pexpect.
-      - run: pip install pexpect -U --quiet
-      - name: Add ansible.cfg to pick up roles path
-        run: "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
-      - name: Install dependencies
-        run: ansible-galaxy install -r requirements.yml
-      # Debug info
-      - run: python --version
-      - run: ansible --version
-      # Run
-      - name: Checking the role/playbook's syntax
-        run: ansible-playbook main.yml --syntax-check
-      - name: Copy test config.yml into place.
-        run: cp tests/config.yml config.yml
-      - run: ansible-playbook main.yml --skip-tags "mas"
+      - run:
+          name: Install pip.
+          command: easy_install pip
+      - run:
+          name: Install Ansible.
+          command: pip install ansible
+      - run:
+          name: Install pexpect.
+          command: pip install pexpect -U --quiet
+      - run:
+          name: Add ansible.cfg to pick up roles path
+          command: "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
+      - run:
+          name: Install dependencies
+          command: ansible-galaxy install -r requirements.yml
+
+      - run:
+          name: Checking the role/playbook's syntax
+          command: ansible-playbook main.yml --syntax-check
+      - run:
+          name: Copy test config.yml into place.
+          command: cp tests/config.yml config.yml
+      - run:
+          name: Run playbook
+          command: ansible-playbook main.yml --skip-tags "mas"
       # Test the playbook's idempotence.
       - run: idempotence=$(mktemp)
-      - "ansible-playbook --extra-vars '{\"configure_terminal\":\"false\"}' main.yml | tee -a ${idempotence}"
+      - run: "ansible-playbook --extra-vars '{\"configure_terminal\":\"false\"}' main.yml | tee -a ${idempotence}"
       - run: >
           tail ${idempotence}
           | grep -q 'changed=0.*failed=0'
