--- a/tasks/osx.yml
+++ b/tasks/osx.yml
@@ -1,5 +1,16 @@
 ---
-# TODO: Use sudo once .osx can be run via root with no user interaction.
-- name: Run .osx dotfiles.
-  shell: "{{ osx_script }}"
-  changed_when: false
+
+- import_tasks: osx/activity_monitor.yml
+- import_tasks: osx/calendar.yml
+- import_tasks: osx/dock.yml
+- import_tasks: osx/finder.yml
+- import_tasks: osx/general_ui_ux.yml
+- import_tasks: osx/mail.yml
+- import_tasks: osx/messages.yml
+- import_tasks: osx/safari_webkit.yml
+- import_tasks: osx/screen.yml
+- import_tasks: osx/spotlight.yml
+- import_tasks: osx/terminal.yml
+- import_tasks: osx/textedit.yml
+- import_tasks: osx/time_machine.yml
+- import_tasks: osx/trackpad_mouse_keyboard.yml
