ohmyzsh become true

--- a/tasks/terminal.yml
+++ b/tasks/terminal.yml
@@ -11,3 +11,4 @@
   shell: sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
   args:
     creates: ~/.oh-my-zsh
+  become: true
